# terminal-chess

./: .flake8  .gitignore  CHANGELOG.md  LICENSE  Pipfile  README.md  pyproject.toml
src/pychess/: __main__.py  game.py
tests/: utils.py
tests/integration/: test_game.py
tests/resources/: byrne_fischer_new_york_1956  fools_mate  kingside_castling  queenside_castling
